# sol-to-do-list

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/data/: mod.rs
