[package]
name = "sol-to-do-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.32"
solana-client = "1.10.32"  # Use the latest version suitable for your needs
solana-sdk = "1.10.32"     # Same as above
